syntax = "proto3";

option go_package = "/task";

package task;

service Task {
  rpc Foo (FooRequest) returns (FooResponse) {}
}

message FooRequest {
  string WorkerId = 1;
  string TaskId = 2;
}

message FooResponse {
  string WorkerId = 1;
  string TaskId = 2;
  string TaskMessage = 3;
}

